[tool.poetry]
name = "cube-api"
version = "0.1.0"
description = ""
authors = ["Egor Fadeev <fad.egor05@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.3.3"
Flask-SQLAlchemy = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
